--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.1.4",
+    "antd": "^5.7.2",
     "axios": "^1.4.0",
+    "firebase": "^10.0.0",
     "gh-pages": "^5.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.14.2",
     "react-router-dom": "^6.14.2",
+    "react-slick": "^0.29.0",
     "sass": "^1.63.6",
     "styled-components": "^6.0.4"
   },
