--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "antd": "^5.7.2",
     "axios": "^1.4.0",
+    "ethers": "^5.7.2",
     "firebase": "^10.0.0",
     "gh-pages": "^5.0.0",
     "prop-types": "^15.8.1",
@@ -33,7 +34,8 @@
     "redux": "^4.2.1",
     "redux-toolkit": "^1.1.2",
     "sass": "^1.63.6",
-    "styled-components": "^6.0.4"
+    "styled-components": "^6.0.4",
+    "use-nft": "^0.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
