--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
     - uses: actions/checkout@v3
@@ -20,9 +20,9 @@ jobs:
         
     - name: Install dependencies
       run: npm ci
-      
+    - name: Add environment variables to .env
+      run: |
+        echo "REACT_VITE_BASE_URL_API=${{ secrets.REACT_VITE_BASE_URL_API }}" >> .env
+        echo "REACT_VITE_API_KEY=${{ secrets.REACT_VITE_API_KEY }}" >> .env
     - name: Build
-      env:
-        REACT_VITE_BASE_URL_API: ${{ secrets.REACT_VITE_BASE_URL_API }}
-        REACT_VITE_API_KEY: ${{ secrets.REACT_VITE_API_KEY }}
       run: npm run build
